(library
 (name p5)
 (public_name p5)
 (libraries js_of_ocaml gen_js_api)
 (preprocess
  (pps js_of_ocaml-ppx gen_js_api.ppx)))

(rule
 (targets shape.ml)
 (deps shape.mli)
 (action
  (run %{bin:gen_js_api} %{deps})))

(rule
 (targets transform.ml)
 (deps transform.mli)
 (action
  (run %{bin:gen_js_api} %{deps})))

(rule
 (targets constant.ml)
 (deps constant.mli)
 (action
  (run %{bin:gen_js_api} %{deps})))

(rule
 (targets vector.ml)
 (deps vector.mli)
 (action
  (run %{bin:gen_js_api} %{deps})))

(rule
 (targets math.ml)
 (deps math.mli)
 (action
  (run %{bin:gen_js_api} %{deps})))

(rule
 (targets camera.ml)
 (deps camera.mli)
 (action
  (run %{bin:gen_js_api} %{deps})))

(rule
 (targets mouse.ml)
 (deps mouse.mli)
 (action
  (run %{bin:gen_js_api} %{deps})))

(rule
 (targets color.ml)
 (deps color.mli)
 (action
  (run %{bin:gen_js_api} %{deps})))

(rule
 (targets typography.ml)
 (deps typography.mli)
 (action
  (run %{bin:gen_js_api} %{deps})))

(alias
 (name DEFAULT)
 (deps transform.ml shape.ml constant.ml math.ml camera.ml mouse.ml color.ml
   typography.ml))
